Closed Bug 488992 Opened 17 years ago Closed 16 years ago

Fix lib/freebl/win_rand.c warnings

Categories

(NSS :: Libraries, defect, P4)

3.12.3
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.12.4

People

(Reporter: sgautherie, Assigned: julien.pierre)

References

()

Details

(Whiteboard: FIPS)

Attachments

(1 file)

[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.2a1pre) Gecko/20090417 SeaMonkey/2.0b1pre] (experimental/_m-c_, home, optim default) (W2Ksp4) (http://hg.mozilla.org/mozilla-central/rev/9e06217fc471 +http://hg.mozilla.org/comm-central/rev/...) { win_rand.c(221) : warning C4101: 'nBytes' : unreferenced local variable win_rand.c(444) : warning C4996: 'fopen' was declared deprecated } There is also some "warning C4996: '...' was declared deprecated".
Severity: normal → trivial
OS: Windows 2000 → All
Priority: -- → P4
Hardware: x86 → All
Version: trunk → 3.12.3
Serge, Are you sure you are using 3.12.3 ? Nelson added -DCRT_SECURE_NO_WARNINGS to the build system as part of bug 469944 . See : http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/security/coreconf/WIN32.mk&rev=1.36#119 I believe this should prevent the C4996 warning . I don't see it on my system when building in win_rand.c .
Assignee: nobody → julien.pierre.boogz
Attachment #377011 - Flags: review?(nelson)
You know that freebl is frozen now for FIPS evaluation, right?
Yes. But I can still submit patches. We must have a queue for bug fixes to freebl/softoken.
(In reply to comment #1) > Are you sure you are using 3.12.3 ? I have no idea: I compiled whatever was included in http://hg.mozilla.org/mozilla-central/rev/9e06217fc471
Status: NEW → ASSIGNED
(In reply to comment #5) > I have no idea: I compiled whatever was included in > http://hg.mozilla.org/mozilla-central/rev/9e06217fc471 No one on the NSS team has any idea what NSS CVS tag that corresponds to, if any. We support specific tagged versions of the source, and it seems evident that the version you're building doesn't really match any of those with an NSS 3.12.3 label or later. :(
Whiteboard: FIPS [Awaiting Softoken's Thaw]
Target Milestone: --- → 3.12.5
Attachment #377011 - Flags: review?(nelson) → review+
Comment on attachment 377011 [details] [diff] [review] Remove unused variable Julien, I have marked this bug's whiteboard with the "magic string" that tells us this bug has a patch to be committed after softoken and freebl become unfrozen.
(In reply to comment #6) > (In reply to comment #5) > > I have no idea: I compiled whatever was included in > > http://hg.mozilla.org/mozilla-central/rev/9e06217fc471 > > No one on the NSS team has any idea what NSS CVS tag that corresponds to, > if any. We support specific tagged versions of the source, and it seems > evident that the version you're building doesn't really match any of those > with an NSS 3.12.3 label or later. :( FWIW, it's NSS_3_12_3_BETA2 - see bug 473837.
(In reply to comment #5) > I have no idea: I compiled whatever was included in > http://hg.mozilla.org/mozilla-central/rev/9e06217fc471 That changeset appears to have nothing to do with NSS.
(In reply to comment #9) > That changeset appears to have nothing to do with NSS. It was just the m-c tip at that time: I never meant this very rev was NSS related.
Target Milestone: 3.12.5 → 3.12.4
Checking in win_rand.c; /cvsroot/mozilla/security/nss/lib/freebl/win_rand.c,v <-- win_rand.c new revision: 1.25; previous revision: 1.24 done
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: FIPS [Awaiting Softoken's Thaw] → FIPS
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: