Fix for bug 488992. Remove unused variable. r=nelson